--- a/main.css
+++ b/main.css
@@ -12,6 +12,15 @@ body {
   /* font-family: sans-serif; */
   color: #392946;
   font-family: 'Raleway', sans-serif;
+  background:
+    linear-gradient(
+      rgba(88,137,182,0.5),
+      rgba(88,137,182,0.5)
+    ),
+    url(./leonard-laub-KQ5LSdUDGik-unsplash.jpg)
+  ;
+  background-size: cover;
+  background-position: center;
 }
 
 a {
@@ -67,7 +76,8 @@ nav ul {
   flex-direction: row;
 }
 
-nav ul a {
+nav ul a,
+.accent {
   padding: 1rem 1.5rem;
   margin: 0 0.5rem;
   color: #FFF;
@@ -82,85 +92,101 @@ nav ul .active a {
   border: solid 1px #FFF;
 }
 
-nav ul .accent a {
-  background-color: #ec862c;
-  text-shadow: 0 0 10px #000;
-  font-weight: 700;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
 main {
   height: 100vh;
-  background:
-    linear-gradient(
-      rgba(88,137,182,0.5),
-      rgba(88,137,182,0.5)
-    ),
-    url(./leonard-laub-KQ5LSdUDGik-unsplash.jpg)
-  ;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-
-main h1 {
-  font-size: 4rem;
-  line-height: 4rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 57.5rem;
+  box-sizing: border-box;
+  padding: 15rem 0 2rem 0;
+}
+
+main h1 {
+  font-size: 2.75rem;
   color: #FFF;
   font-weight: 400;
   text-shadow: 0 0 10px #000;
-  margin-bottom: 1rem;
-}
-
-main h1 > * {
-  margin-right: 1.5rem;
-}
-
-main h1 div {
-  height: 4.5rem;
-  line-height: 4.5rem;
-  overflow: hidden;
-}
-
-main h1 ul {
   margin: 0;
-  padding: 0;
-  height: 4.5rem;
-  line-height: 4.5rem;
-  text-align: center;
-
-  transition: transform 0.8s;
-  transform: translateY(-9rem);
-}
-
-main h1 ul li,
-main h1 ul li a {
-  height: 4.5rem;
-  line-height: 4.5rem;
-  color: #FFF;
-}
-
-main h1 ul li {
-  background-color: rgba(255, 255, 255, 0.2);
 }
 
 main div {
   max-width: 65rem;
+  padding: 0 2rem;
+  box-sizing: border-box;
+  width: 50%;
 }
 
-main div:nth-child(1) {
-  background-color: rgba(255, 255, 255, 0.1);
-  height: 100%;
+main div:nth-child(2) {
+  max-width: 55rem;
 }
 
 main p {
   font-size: 2rem;
   margin: 0;
   color: #FFF;
+}
+
+.embed-container {
+  position: relative; padding-bottom: 56.25%; height: 0;
+  overflow: hidden;
+  max-width: 70rem;
+  width: 100%;
+}
+
+@media (max-width: 1000px) {
+  nav {
+    position: static;
+    flex-direction: column;
+  }
+
+  main {
+    height: auto;
+    padding-top: 2rem;
+    flex-direction: column-reverse;
+  }
+
+  main div {
+    width: 100%;
+    max-width: 50rem;
+  }
+
+  .embed-container {
+    margin-bottom: 3.5rem;
+  }
+
+  .accent.xl {
+    display: block;
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 555px) {
+  .accent:not(.xl) {
+    display: none;
+  }
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+.accent {
+  background-color: #ec862c;
+  text-shadow: 0 0 10px #000;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.accent.xl {
+  display: inline-block;
+  margin-top: 2rem;
+  font-size: 2.2rem;
+}
+
+.cta-row {
+  width: 100%;
+  padding: 0 !important;
 }
